[project]
name = "data-ranking-training-dynamics"
version = "0.1.0"
description = "Impact of Data Ranking on Training Dynamics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.ty.environment]
python = ".venv"
root = ["."]